# OpenClaw-installer

./: DEVELOPMENT.md  FEISHU_IMPROVEMENTS.md  GitHub推送指南.md  NEXT_STEPS.md  PRE_DEV_CHECKLIST.md  README.md  RELEASE_GUIDE.md  check-env.sh  index.html  package.json  pnpm-lock.yaml  发布清单.md  图标更新总结.md  推送到GitHub.sh  正式图标设计方案.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  ICON_INFO.md  README.md  TODO.md  create-icons.sh  icon.icns  选择图标.sh
src-tauri/src/: detector.rs  executor.rs  installer.rs  main.rs
src/components/: ConfigWizard.vue  DependencyCheck.vue  InstallOptions.vue  InstallProgress.vue  SuccessScreen.vue  WelcomeScreen.vue
