[package]
name = "openclaw-installer"
version = "0.1.0"
description = "OpenClaw 一键安装工具"
authors = ["OpenClaw Community"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
which = "6.0"
regex = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 特定依赖

[target.'cfg(target_os = "windows")'.dependencies]
# Windows 特定依赖

[target.'cfg(target_os = "linux")'.dependencies]
# Linux 特定依赖

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
